--- a/giaitri/game/online.html
+++ b/giaitri/game/online.html
@@ -8,14 +8,16 @@
 <body>
     <h1>Game Online</h1>
     <nav>
-        <ul>
-            <li><a href="../../index.html">Trang Chủ</a></li>
-            <li><a href="offline.html">Game Offline</a></li>
-            <li><a href="../nhac/noi.html">Nhạc Nội</a></li>
-            <li><a href="../nhac/ngoai.html">Nhạc Ngoại</a></li>
-            <li><a href="../../tintuc/kh.html">Khoa Học</a></li>
-            <li><a href="../../tintuc/xh.html">Xã Hội</a></li>
-        </ul>
+        <table border="1" width="100%">
+            <tr>
+                <td><a href="../../index.html">Trang Chủ</a></td>
+                <td><a href="offline.html">Game Offline</a></td>
+                <td><a href="../nhac/noi.html">Nhạc Nội</a></td>
+                <td><a href="../nhac/ngoai.html">Nhạc Ngoại</a></td>
+                <td><a href="../../tintuc/kh.html">Khoa Học</a></td>
+                <td><a href="../../tintuc/xh.html">Xã Hội</a></td>
+            </tr>
+        </table>        
     </nav>
     <P><img src="hinh2.jpg" alt="Hình 2" width="500"></P>
 </body>
